--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
 	--spacing-m: 16px;
 	--spacing-lg: 32px;
 	--spacing-xl: 64px;
+	--standard-width: 1144px;
 	--purple-1: #6962f7;
 	--purple-2: #7000ff;
 	--blue-1: #00d4ff;
@@ -41,6 +42,11 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	padding-top: var(--spacing-sm);
+	background-color: cornflowerblue;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 h1 {
@@ -180,4 +186,38 @@ p {
 
 .with-icon:hover > img {
 	transform: translateX(4px);
+}
+
+/* Navbar */
+.navbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	max-width: var(--standard-width);
+	padding: 0 var(--spacing-m);
+}
+
+.menu {
+	display: flex;
+	list-style: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu a {
+	color: var(--text-light);
+	margin: 0 var(--spacing-m);
+	font-weight: bold;
+}
+
+.menu a:hover {
+	text-decoration: underline;
+}
+
+.navbar-button {
+	background-color: rgba(250, 250, 250, 0.25);
+}
+.navbar-button:hover {
+	background-color: rgba(250, 250, 250, 0.5);
 }
