--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	padding-top: var(--spacing-sm);
-	background-color: cornflowerblue;
+	background-color: rgb(127, 44, 223);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
