--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 	--button-size: 16px;
 	/* SPACING */
 	--spacing-sm: 8px;
-	--spacing-m: 16px;
+	--spacing-md: 16px;
 	--spacing-lg: 32px;
 	--spacing-xl: 64px;
 	--standard-width: 1144px;
@@ -42,7 +42,7 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	padding-top: var(--spacing-sm);
-	background-color: rgb(78, 165, 57);
+	background-color: #4D13AA;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -117,7 +117,41 @@ p {
 	font-size: var(--p-size);
 	line-height: var(--p-height);
 	font-weight: 400;
-	margin: var(--spacing-m) 0;
+	margin: var(--spacing-md) 0;
+}
+
+/* Layout Styles */
+.section-container {
+	width: 100%;
+	max-width: var(--standard-width);
+}
+
+.two-column {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	box-sizing: border-box;
+}
+
+.two-column > .col-left {
+	width: 50%;
+	box-sizing: border-box;
+	padding-right: var(--spacing-md);
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+}
+
+.two-column > .col-right {
+	width: 50%;
+	box-sizing: border-box;
+	padding-left: var(--spacing-md);
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
 }
 
 .subtitle, .subtitle2 {
@@ -148,7 +182,7 @@ p {
 	background-color: var(--primary-accent);
 	border: none;
 	color: var(--text-light);
-	padding: var(--spacing-sm) var(--spacing-m);
+	padding: var(--spacing-sm) var(--spacing-md);
 	transition: all 0.15s ease;
 }
 
@@ -195,7 +229,7 @@ p {
 	align-items: center;
 	width: 100%;
 	max-width: var(--standard-width);
-	padding: 0 var(--spacing-m);
+	padding: 0 var(--spacing-md);
 }
 
 .menu {
@@ -207,7 +241,7 @@ p {
 
 .menu a {
 	color: var(--text-light);
-	margin: 0 var(--spacing-m);
+	margin: 0 var(--spacing-md);
 	font-weight: bold;
 }
 
