--- a/styles.css
+++ b/styles.css
@@ -61,20 +61,14 @@ h1 {
 
 h2 {
 	font-family: var(--heading-font);
-	font-weight: 500;
-	font-size: var(--h2-size);
-	margin: 0;
-	width: 100%;
-	letter-spacing: -.25px;
-	line-height: var(--h2-height);
-}
-
-h3 {
-	font-family: var(--heading-font);
-	font-weight: 500;
+	font-weight: 600;
 	font-size: var(--h3-size);
 	margin: 0;
 	width: 100%;
+}
+
+h3 {
+	
 }
 
 h4 {
@@ -303,6 +297,14 @@ main {
 }
 
 /* Unified Platform Section */
+.unified-platform-section {
+	padding: var(--spacing-xl) 0;
+}
+
+.unified-platform-section h2 {
+	width: 50%;
+	margin-bottom: var(--spacing-md);
+}
 
 .unified-platform-section .primary-button {
 	background-color: var(--purple-1);
