Added graphic grid section markup and styling

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
 	--bg-white: #fff;
 	--bg-light: #f7f9fc;
 
+	--standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
 }
 
 body {
@@ -42,7 +43,8 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	padding-top: var(--spacing-sm);
-	background-color: #4D13AA;
+	/* background-color: #4D13AA; */
+	background-color: var(--bg-white);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -312,4 +314,36 @@ main {
 }
 .unified-platform-section .primary-button:hover {
 	background-color: var(--primary-accent);
+}
+
+/* Graphic Grid Section */
+.graphic-grid {
+	display: grid;
+	grid-template-areas:
+	"card slack slack"
+	"phone slack slack"
+	"phone dash dash";
+	grid-gap: var(--spacing-lg);
+	padding: var(--spacing-lg) 0;
+}
+
+#credit-card {
+	grid-area: card;
+	width: 100%;
+	box-shadow: var(--standard-box-shadow);
+}
+#slack-invoice {
+	grid-area: slack;
+	width: 100%;
+	box-shadow: var(--standard-box-shadow);
+}
+#phone {
+	grid-area: phone;
+	width: 100%;
+	box-shadow: var(--standard-box-shadow);
+}
+#dash {
+	grid-area: dash;
+	width: 100%;
+	box-shadow: var(--standard-box-shadow);
 }
