--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,11 @@ h2 {
 }
 
 h3 {
+	font-family: var(--heading-font);
+	font-weight: 500;
+	font-size: var(--h3-size);
+	margin: 0;
+	width: 100%;
 	
 }
 
@@ -149,6 +154,27 @@ p {
 	flex-direction: column;
 	align-items: start;
 	justify-content: center;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	padding: var(--spacing-sm) var(--spacing-md) var(--spacing-sm) 0;
+}
+
+.card .icon {
+	height: 50px;
+	margin: 0 0 var(--spacing-sm) 0;
+}
+
+.card h3 {
+	font-family: var(--heading-font);
+	font-weight: 500;
+	font-size: var(--h6-size);
+	margin: 0;
+	width: 100%;
 }
 
 .subtitle, .subtitle2 {
@@ -347,3 +373,5 @@ main {
 	width: 100%;
 	box-shadow: var(--standard-box-shadow);
 }
+
+
