--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ body {
 	align-items: center;
 }
 
+main {
+	width: 100%;
+}
+
 h1 {
 	font-family: var(--heading-font);
 	font-weight: 600;
@@ -284,6 +288,12 @@ main {
 }
 
 /* HERO STYLES */
+.hero {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
 .button-container {
 	display: flex;
 	flex-direction: row;
@@ -310,6 +320,12 @@ main {
 }
 
 /* PARTNERS SECTION */
+.partners-section {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
 .partners-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -327,6 +343,9 @@ main {
 /* UNIFIED PLATFORM SECTION */
 .unified-platform-section {
 	padding: var(--spacing-xl) 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .unified-platform-section h2 {
@@ -343,6 +362,12 @@ main {
 }
 
 /* GRAPHIC GRID SECTION */
+.graphic-section {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
 .graphic-grid {
 	display: grid;
 	grid-template-areas:
@@ -378,6 +403,9 @@ main {
 .integration-section {
 	color: var(--text-light);
 	background-color: var(--primary-accent);
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .integration-section .primary-button {
@@ -414,6 +442,12 @@ main {
 }
 
 /* WHY SWIPE SECTION */
+.why-swipe-section {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
 .why-swipe-section .card-container {
 	display: flex;
 	margin: var(--spacing-md) 0;
@@ -428,4 +462,39 @@ main {
 
 .why-swipe-section .secondary-text {
 	color: var(--text-dark)
+}
+
+/* GLOBAL SECTION */
+.global-section {
+	background-color: var(--primary-accent);
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	color: var(--text-light)
+}
+
+.global-section a {
+	color: var(--blue-1);
+}
+
+.global-section a:hover {
+	color: var(--text-light);
+}
+
+.global-section .card-container {
+	display: flex;
+	margin: calc(var(--spacing-xl) * 2) 0;
+}
+
+.global-section .card-container .card {
+	width: 25%;
+	box-sizing: border-box;
+	padding: 0 var(--spacing-sm) 0 0;
+	margin: 0 var(--spacing-md) 0 0;
+}
+
+.global-section .card-container .card h3 {
+	border-left: 2px solid var(--blue-1);
+	padding: 0 0 0 var(--spacing-sm);
+	/* line-height: 28px;/ */
 }
