--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,9 @@ main {
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	color: var(--text-light)
+	color: var(--text-light);
+	position: relative;
+	padding: calc(var(--spacing-xl) * 3) 0;
 }
 
 .global-section a {
@@ -497,4 +499,11 @@ main {
 	border-left: 2px solid var(--blue-1);
 	padding: 0 0 0 var(--spacing-sm);
 	/* line-height: 28px;/ */
+}
+
+#globe {
+	max-width: 844px;
+	opacity: 25%;
+	position: absolute;
+	top: 8%;
 }
