Added the mark up for the virtual events section

--- a/styles.css
+++ b/styles.css
@@ -507,3 +507,10 @@ main {
 	position: absolute;
 	top: 8%;
 }
+
+/* VIRTUAL EVENTS SECTION */
+.virtual-events-section {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
