--- a/styles.css
+++ b/styles.css
@@ -532,6 +532,11 @@ main {
 	background-color: var(--primary-accent);
 }
 
+.virtual-events-section .col-left {
+	height: 446px;
+	padding: 0 var(--spacing-xl);
+}
+
 .swipe-sessions-card {
 	width: 540px;
 	height: 446px;
@@ -582,4 +587,21 @@ main {
 .virtual-events-section .avatars img:nth-of-type(2) {
 	position: absolute;
 	left: 55px;
+}
+
+.virtual-events-section .card-bottom {
+	width: 100%;
+	height: 50%;
+	box-sizing: border-box;
+	padding: var(--spacing-xl);
+}
+
+.virtual-events-section .card-bottom .subtitle {
+	margin: var(--spacing-lg) 0 0 0;
+}
+
+.virtual-events-section .card-bottom .secondary-text {
+	color: var(--text-dark);
+	width: 50%;
+	font-weight: 700;
 }
