--- a/styles.css
+++ b/styles.css
@@ -534,7 +534,7 @@ main {
 
 .virtual-events-section .col-left {
 	height: 446px;
-	padding: 0 var(--spacing-xl);
+	/* padding: 0 var(--spacing-xl); */
 }
 
 .swipe-sessions-card {
@@ -606,4 +606,39 @@ main {
 	font-weight: 700;
 }
 
-.getting-started-section
+/* GETTING STARTED SECTION */
+
+.getting-started-section {
+	display: flex;
+	justify-content: center;
+	padding: var(--spacing-xl) 0;
+}
+
+.getting-started-section .primary-button {
+	background-color: var(--purple-1);
+	margin: var(--spacing-md) 0;
+}
+
+.getting-started-section .primary-button:hover {
+	background-color: var(--primary-accent);
+}
+
+.getting-started-section .col-left {
+	padding: 0 var(--spacing-xl) 0 0;
+}
+
+.getting-started-section .col-right {
+	flex-direction: row;
+}
+
+.getting-started-section .col-right .card {
+	width: 50%;
+	box-sizing: border-box;
+	padding: 0 var(--spacing-sm) 0 0;
+	margin: 0 var(--spacing-md) 0 0;
+}
+
+.getting-started-section .col-right .card .secondary-button {
+	color: var(--purple-2);
+	padding-left: 0;
+}
