--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body {
 
 main {
 	width: 100%;
+	margin: var(--spacing-xl) 0 0 0;
 }
 
 h1 {
@@ -288,10 +289,6 @@ p {
 }
 .navbar-button:hover {
 	background-color: rgba(250, 250, 250, 0.5);
-}
-
-main {
-	margin: var(--spacing-xl) 0;
 }
 
 /* HERO STYLES */
@@ -641,4 +638,60 @@ main {
 .getting-started-section .col-right .card .secondary-button {
 	color: var(--purple-2);
 	padding-left: 0;
+}
+
+.footer {
+	display: flex;
+	justify-content: center;
+	background-color: var(--bg-light);
+	padding: var(--spacing-xl) 0;
+}
+
+#footer-logo {
+	max-width: 108px;
+	margin: 0 0 var(--spacing-md);
+}
+
+.footer .section-container {
+	display: flex;
+
+}
+
+.footer .col {
+	width: 25%;
+}
+
+.footer .col ul {
+	list-style: none;
+	padding: 0;
+}
+
+.footer .col ul li {
+	margin: var(--spacing-md) 0;
+}
+
+.footer .col a {
+	color: var(--text-dark);
+	font-weight: normal;
+}
+.footer .col a:hover {
+	color: var(--purple-1);
+	text-decoration: underline;
+}
+
+.footer .icon-link {
+	display: flex;
+	align-items: center;
+	margin: var(--spacing-md) 0;
+}
+
+.footer .icon-link img {
+	width: 24px;
+	margin: 0 var(--spacing-sm) 0 0;
+}
+
+.footer h3 {
+	font-size: var(--h6-size);
+	font-weight: 700;
+
 }
