--- a/styles.css
+++ b/styles.css
@@ -350,6 +350,7 @@ p {
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	background-color: var(--bg-light);
 }
 
 .unified-platform-section h2 {
@@ -370,6 +371,7 @@ p {
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	background-color: var(--bg-light);
 }
 
 .graphic-grid {
@@ -485,13 +487,25 @@ p {
 
 /* GLOBAL SECTION */
 .global-section {
-	background-color: var(--primary-accent);
 	width: 100%;
 	display: flex;
 	justify-content: center;
 	color: var(--text-light);
 	position: relative;
-	padding: calc(var(--spacing-xl) * 3) 0;
+	padding: calc(var(--spacing-xl) * 3) 0 0 0;
+}
+
+.global-section::before {
+	content: "";
+	width: 100%;
+	height: 1200px;
+	background-color: var(--primary-accent);
+	position: absolute;
+	top: -32px;
+	left: 0;
+	transform: skewY(-10deg);
+	z-index: -1;
+
 }
 
 .global-section a {
@@ -533,6 +547,17 @@ p {
 	display: flex;
 	justify-content: center;
 	padding: calc(var(--spacing-xl) * 2) 0;
+	position: relative;
+}
+
+.virtual-events-section::before {
+	content: "";
+	background-color: var(--bg-white);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	z-index: -1;
 }
 
 .virtual-events-section .primary-button {
