--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	padding-top: var(--spacing-sm);
-	/* background-color: #4D13AA; */
 	background-color: var(--bg-white);
 	display: flex;
 	flex-direction: column;
@@ -265,6 +264,7 @@ p {
 	width: 100%;
 	max-width: var(--standard-width);
 	padding: 0 var(--spacing-md);
+	margin: 0 0 var(--spacing-xl) 0;
 }
 
 .menu {
@@ -291,6 +291,20 @@ p {
 	background-color: rgba(250, 250, 250, 0.5);
 }
 
+/* ANIMATED GRADIENT */
+#gradient-canvas {
+	width: 200%;
+	height: 970px;
+	position: absolute;
+	top: -600px;
+	left: -50%;
+	transform: rotate(-10deg);
+	z-index: -1;
+	--gradient-color-1: #ef008f;
+	--gradient-color-2: #6ec3f4;
+	--gradient-color-3: #7038ff;
+	--gradient-color-4: #ffba27;
+}
 /* HERO STYLES */
 .hero {
 	width: 100%;
@@ -426,6 +440,17 @@ p {
 	left:0;
 	z-index: -1;
 	transform: skewY(-10deg);
+}
+
+.integration-section::after {
+	content: "";
+	width: 100%;
+	height: 50%;
+	background-color: var(--bg-light);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -2;
 }
 
 .integration-section .primary-button {
