--- a/styles.css
+++ b/styles.css
@@ -802,6 +802,16 @@ p {
 	.integration-section .card-container .card {
 		width: 100%;
 	}
+
+	/* WHY SWIPE */
+	.why-swipe-section .card-container {
+		flex-wrap: wrap;
+	}
+
+	.why-swipe-section .card-container .card {
+		width: 50%;
+		margin: var(--spacing-md) 0;
+	}
 }
 
 /* MOBILE SIZE */
@@ -831,6 +841,16 @@ p {
 	/* INTEGRATION SECTION */
 	.integration-section .col-right {
 		display: none;
+	}
+
+	/* WHY SWIPE */
+	.why-swipe-section .card-container .card {
+		width: 100%;
+		margin: var(--spacing-sm) 0;
+	}
+
+	.why-swipe-section .card-container .card .icon {
+		height: 35px;
 	}
 }
 
