--- a/styles.css
+++ b/styles.css
@@ -870,6 +870,21 @@ p {
 	#globe {
 		opacity: 10%;
 	}
+
+	/* VIRTUAL EVENTS SECTION */
+	.virtual-events-section .swipe-sessions-card {
+		margin: var(--spacing-lg) 0;
+		width: 100%;				
+	}
+	.virtual-events-section .swipe-sessions-card .secondary-text{
+		width: 100%;				
+	}
+	.virtual-events-section .swipe-sessions-card .card-top {
+		height: 50%;				
+	}
+	#sessions-logo {
+		width: 300px;
+	}
 }
 
 html, body {
