--- a/styles.css
+++ b/styles.css
@@ -822,6 +822,15 @@ p {
 		width: 50%;
 		margin: var(--spacing-md) 0;
 	}
+	/* GETTING STARTED SECTION */
+	.getting-started-section .col-right {
+		flex-wrap: wrap;
+
+	}
+	.getting-started-section .col-right .card {
+		width: 100%;
+		margin: var(--spacing-md) 0;
+	}
 }
 
 /* MOBILE SIZE */
@@ -885,6 +894,24 @@ p {
 	#sessions-logo {
 		width: 300px;
 	}
+	/* FOOTER SECTION */
+	.footer .section-container {
+		flex-wrap: wrap;
+	}
+	.footer .col {
+		width: 50%;
+		margin: var(--spacing-md) 0;
+	}
+	.footer .col a {
+		font-size: 12px;
+	}
+	#footer-logo {
+		width: 70px;
+	}
+	.footer .icon-link img {
+		width: 18px;
+	}
+	
 }
 
 html, body {
